Refactoring: consider finder results as domain objects